sqliteへのアクセス処理（アクセス不可）

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
      </head>
     <body>
         <h1>アメリカ語でもじぴったん</h1>
+        <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
