昨年作成していたプロトタイプをアップロード

--- a/index.html
+++ b/index.html
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html lang="ja">
-    <head>
-        <meta charset="utf-8">
-        <title>アメリカ語でもじぴったん</title>
-        <meta name="description" content="英語でもじぴったん">
-        <link rel="stylesheet" href="https://unpkg.com/ress@4.0.0/dist/ress.min.css">
-        <link rel="stylesheet" href="style.css">
-     </head>
-    <body>
-        <h1>アメリカ語でもじぴったん</h1>
-        <script type="text/javascript" src="main.js"></script>
-    </body>
+	<head>
+		<meta charset="utf-8">
+		<title>アメリカ語でもじぴったん</title>
+		<meta name="description" content="サイトキャプションを入力">
+		<meta name="keywords" content="サイトキーワードを,で区切って入力">
+		<link rel="stylesheet" href="style.css">
+		<script src="sample.js"></script>
+	</head>
+
+	<body>
+		<h1>アメリカ語でもじぴったん</h1>
+		<!----- ヘッダー ----->
+		<header>
+			<div id="result">経過秒数: </div>
+		</header>
+		
+		<!----- メインコンテンツ ----->
+		<div id="panel"></div>
+		<div id="e_word_list"></div>
+		<!----- メインコンテンツ END ----->
+		
+		<!----- フッター ----->
+		<!-- <footer>フッター</footer> -->
+		<!----- フッター END ----->
+	</body>
 </html>
