選択した文字を写す機能の追加

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 	<body>
 		<h1>アメリカ語でもじぴったん</h1>
+        <div class ="save_alf" id="save_alf">現在選択中：</div>
 		<!----- ヘッダー ----->
 		<header>
 			<div id="result">経過秒数: </div>
@@ -20,9 +21,10 @@
 		<div id="panel"></div>
 		<div id="e_word_list"></div>
 		<!----- メインコンテンツ END ----->
-		
 		<!----- フッター ----->
-		<!-- <footer>フッター</footer> -->
+		<!-- <footer>フッター
+        </footer> -->
+        <div class="dic_disp">辞書を表示する場所</div>
 		<!----- フッター END ----->
 	</body>
 </html>
